<resources>
    <string name="yeardb">Your year</string>
    <string name="coursedb">Courses</string>
    <string name="semiseters">semister</string>
    <string name="app_name">HighTechStudents</string>
    <string name="if_you_are_school_member_register_here">If You are School Member Register Here!!</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">Last Name</string>
    <string name="surname">SurName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="signup">SignUp</string>
    <string name="submit_profile">Submit Profile</string>
    <string name="year_you_registered">Year you Registered</string>
    <string name="to_continue_please_insert_the_code_which_is_provided_to_you_by_the_department">To continue Please insert the code Which is provided to you by the Department.</string>
    <string name="continueTo">Continue</string>
    <string name="dispaly">Display</string>
    <string name="departementforc"></string>
    <string name="yearforc"></string>
    <string name="semisterforc"></string>
    <string name="coursedisplay">DISPLAY_COURSES</string>
    <string name="button">Display</string>
    <string name="studentidfor_grade_view">Student id</string>
    <string name="departementforgrade">Departement</string>
    <string name="instractor_name_for_grade_view">Instractor Name</string>
    <string name="headlinView">WEL-COME TO GRADE VIEW</string>
    <string name="courseview_for_gradeview">Course</string>
    <string name="gradeview_forstudent">Grade</string>
    <string-array name="dep">
        <item>select department</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Accounting</item>
        <item>TVTE</item>
    </string-array>
    <string-array name="Year">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string-array name="semister">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="gender">
        <item>select gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="section">
        <item>select section</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="hello_blank_fragment">StudentName</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="username">username</string>
    <string name="studentid">StudentId</string>
    <string name="department">department</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_0">0</string>
    <string name="semister">Semister</string>
    <string name="year">Year</string>
    <string name="section">Section</string>
    <string name="cousre_title">Cousre Title</string>
    <string name="credit_hour">Credit Hour</string>
    <string name="my_dashboard">My DashBoard</string>
    <string name="grade_report">Grade Report</string>
    <string name="setting">Setting</string>
    <string name="courses">Courses</string>
    <string name="semister_grade">Semister Grade</string>
    <string name="sur_name">Sur name</string>
    <string name="id">Id</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="code">Code</string>
    <string name="verfiy">Verfiy</string>
    <string name="to">To</string>
    <string name="code_has_been_sent_to_this_phone_number">Code Has Been Sent To This Phone Number</string>
    <string name="phone1">PhoneNumber</string>
    <string name="logout">Logout</string>
    <string name="days_you_attended">Days You Attended</string>


</resources>