<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instractorforgradeview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="264dp"
        android:layout_height="42dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textviewstdid"
        android:layout_width="264dp"
        android:layout_height="45dp"
        android:text="@string/studentidfor_grade_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/deprtmentforgrade"
        android:layout_width="264dp"
        android:layout_height="49dp"
        android:text="@string/departementforgrade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewstdid"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/insnameforgradeview"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:text="@string/instractor_name_for_grade_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deprtmentforgrade"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/courseviewforgrad"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:text="@string/courseview_for_gradeview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insnameforgradeview"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/gradeviewforstudent"
        android:layout_width="96dp"
        android:layout_height="42dp"
        android:text="@string/gradeview_forstudent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insnameforgradeview"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/viewofhedline"
        android:layout_width="231dp"
        android:layout_height="35dp"
        android:text="@string/headlinView"

        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>