<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneVerification"
    android:orientation="vertical"
    android:background="@drawable/backgroundforverification">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="390dp"
    android:layout_gravity="center"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/info"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/code_has_been_sent_to_this_phone_number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Phonenum"
        android:id="@+id/phonenumenterd"
        android:layout_toRightOf="@id/info"
        android:layout_toEndOf="@id/info" />
</RelativeLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_height="wrap_content"
   android:layout_marginTop="33dp"
    android:hint="@string/code"
    android:background="@drawable/edit_text_background">
    <EditText
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor"
        android:id="@+id/codeview"
        android:background="@android:color/transparent"
        android:layout_marginLeft="12dp" />
</com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verifiy"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_box"
        android:text="@string/verfiy"
        android:textColor="@android:color/white"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>