<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_marginTop="35dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/icons8_male_user_100"
          android:layout_gravity="center"
         tools:ignore="ContentDescription" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        android:hint="@string/first_name"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:id="@+id/first"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:id="@+id/last_name"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        android:hint="@string/sur_name"
        app:shapeAppearance="@style/ThemeOverlay.AppCompat.Light"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:id="@+id/surname"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        android:hint="@string/id"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:id="@+id/Id"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        android:hint="@string/year_you_registered"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:importantForAutofill="no"
            android:id="@+id/Year_Registered"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/departement"
        android:layout_marginTop="42dp"
        android:background="@android:drawable/spinner_dropdown_background"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/Section"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/spinner_background"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/submit"
        android:onClick="SubmitProfile"/>
</LinearLayout>